src/test/resources/amyc/nameAnalyzer/passing/DuplicateClassParams.amy
object ClassParams
  abstract class Foo
  case class Bar(v: Int(32), v: Int(32)) extends Foo
end ClassParams
