src/test/resources/amyc/nameAnalyzer/failing/UnknownParent.amy
object Parent
  case class Foo() extends Bar
end Parent
